fix overflow-x on desktop

--- a/src/pages/Login/style.sass
+++ b/src/pages/Login/style.sass
@@ -10,7 +10,7 @@
         margin: 8rem 1rem 4rem
     &__info
         background: #fff
-        width: 100vw
+        width: 100%
         padding: 3rem 1rem
         color: variables.$orange
         text-align: center
